# alc-ux

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CITATION.cff  LICENSE  README.md  coding_style.md  contributing.md  main.ipynb  pyproject.toml  setup.cfg  start.md  start.py
.github/ISSUE_TEMPLATE/: bug_report.md  documentation.md  feature_request.md
.github/PULL_REQUEST_TEMPLATE/: pull_request_template.md
.github/workflows/: ci-docs-testing.yml  ci-docs.yml  ci-release.yml  ci-testing.yml
aiidalab_alc/: main.py  resources.py  structure.py  utils.py  workflow.py
apptainer/: aiidalab.def
docker/aiidalab_chemshell/: 61_prepare-aiidalab_alc.sh  Dockerfile
docs/source/: conf.py  index.rst
docs/source/_static/: custom.css
docs/source/api_docs/: aiidalab_alc.rst  modules.rst
docs/source/dev_docs/: aiidalab_app_design.rst  containers.rst  index.rst  intro.rst  resource_setup.rst  startup_and_deployment.rst  workflow_implementation.rst
docs/source/user_docs/: ada_guide.rst  index.rst  intro.rst  resource_manager.rst  run_local.rst
resources/: README.md  remotes.json
scripts/: README.md  aiidalab.desktop  startup.ps1  startup.sh
src/aiidalab_alc/: __init__.py  file_handling.py  main.py  process.py  resources.py  results.py  structure.py  utils.py  workflow.py
src/aiidalab_alc/common/: __init__.py  database.py  file_handling.py  navigation.py
tests/: test_base.py
