[build-system]
requires = ["setuptools>=62.6"]
build-backend = "setuptools.build_meta" 


[tool.ruff]
target-version = "py310" 
exclude = ["conf.py",]

[tool.ruff.lint]
select = [
    # flake8-bugbear
    "B",
    # pylint
    "C", "R",
    # pydocstyle
    "D",
    # pycodestyle
    "E", "W",
    # Pyflakes
    "F", "FA",
    # isort
    "I",
    # pep8-naming
    "N",
    # pyupgrade
    "UP",
]

[tool.ruff.lint.pydocstyle]
convention = "numpy"
