[aiidalab]
title = ALC App 

[metadata]
name = aiidalab-alc-app 
version = 0.0.1-alpha 
author = Dr. Benjamin T. Speake 
author_email = benjamin.speake@stfc.ac.uk
description = ALC App for AiiDA Lab 
long_description = file: README.md 
long_description_content_type = text/markdown
url = https://github.com/stfc/alc-ux
project_urls = 
    Logo = https://raw.githubusercontent.com/stfc/alc-ux/refs/heads/main/images/alc-100.webp
    Source = https://github.com/stfc/alc-ux
    Bug Tracker = https://github.com/stfc/alc-ux/issues
classifiers = 
    Framework :: AiiDA 
    Operating System :: OS Independent
    Programming Language :: Python :: 3  
